update terms & conditions

--- a/translations/policy+intl-icu.en.yml
+++ b/translations/policy+intl-icu.en.yml
@@ -1,42 +1,60 @@
-title: 'Terms & Conditions'
-privacy:
-    title: 'Privacy Policy'
-    text:
-        '<p>This privacy policy will explain how our website uses the personal data we collect from you when you use Captain Coaster.</p>
-        <p>Captain Coaster collects the following data when you register:</p>
+policy:
+    title: 'Privacy Policy and Terms of Use'
+    content: |
+        <h2>About Captain Coaster</h2>
+        <p>Captain Coaster is a community guide for roller coaster enthusiasts. We are not affiliated with any park or manufacturer.</p>
+
+        <h2>Legal Information</h2>
+        <p><strong>Publisher:</strong> Florian Blond<br>
+        <strong>Contact:</strong> contact@captaincoaster.com<br></p>
+
+        <p><strong>Web Host:</strong> HOSTINGER, UAB<br>
+        Švitrigailos str. 34, Vilnius 03230, Lithuania</p>
+
+        <p><strong>Cloud Services:</strong> Amazon Web Services EMEA SARL<br>
+        38 Avenue John F. Kennedy, L-1855, Luxembourg</p>
+
+        <p><strong>All data is stored in France</strong></p>
+
+        <h2>Your Personal Data (GDPR)</h2>
+        <p><strong>Data collected:</strong> Name, email, profile picture (Google), IP address, content you publish on the site.</p>
+
+        <p><strong>Why:</strong> Account management, community service operation, site security.</p>
+
+        <p><strong>Legal basis:</strong> Service execution and security (legitimate interest).</p>
+
+        <p><strong>Sharing:</strong> Your data is never sold or shared with anyone.</p>
+
+        <p><strong>Retention:</strong> As long as your account exists, then 1 month after deletion.</p>
+
+        <p><strong>Your rights:</strong> You can access, correct, delete your data or object to processing. <a href="{contact_link}">Contact us</a></p>
+
+        <h2>Cookies</h2>
+        <p>We only use essential cookies (session, language) necessary for operation. No advertising or tracking cookies.</p>
+
+        <h2>Usage Rules</h2>
         <ul>
-        <li>First name and last name,</li>
-        <li>Email address,</li>
-        <li>Public profile picture (only when using Google authentication)</li>
+        <li><strong>One account</strong> per person</li>
+        <li><strong>Honesty:</strong> Only rate coasters you've actually ridden</li>
+        <li><strong>Respect:</strong> No offensive, illegal or inappropriate content</li>
+        <li><strong>Normal usage:</strong> Mass data extraction (scraping) is prohibited</li>
+        <li><strong>Moderation:</strong> We may edit/delete any content and suspend accounts</li>
         </ul>
-        <p>We will keep your data as long as you use our service, in a secure storage and respectfully of the French law "Loi Informatique et Libertés du 6 janvier 1978".</p>
-        <p>They are never shared to anyone, and are used only to create an account and for some Captain Coaster features.</p>
-        <p>Every user is entitled to the following:</p>
-        <ul>
-        <li>The right to access - You have the right to request us for copies of your personal data, sent by email,</li>
-        <li>The right to rectification - You have the right to request that a correction of any information you believe is inaccurate or missing,</li>
-        <li>The right to erasure - You have the right to request that we erase your personal data.</li>
-        </ul>
-        <p>If you have any questions about Captain Coaster privacy policy, the data we hold on you, or you would like to exercise one of your data protection rights, please <a href="{link_href}">contact us</a>.</p>'
-cookies:
-    title: 'Cookie Policy'
-    text:
-        "<p>Cookies are small files stored on a user's computer to make your life simpler.</p>
-        <p>Captain Coaster uses a session cookie to remember you when you connect. It avoids you to sign in each time you visit us. We also use a Google Analytics cookie for statistics.</p>"
-terms:
-    title: 'Using Captain Coaster'
-    text:
-        '<p>Captain Coaster is a community website for theme parks and roller coasters enthusiasts.  It is affiliated to no park, nor manufacturer, nor amusement industry company.</p>
-        <p>It is opened to anyone: you just need to connect to share your experience on coasters (ratings, tags, reviews). To access these features, you will need a <b>valid</b> Google account or email address. <b>Having multiple accounts is definitely forbidden</b> and will lead to a permanent ban.</p>
-        <p>All participative fields are reviewed by team moderators who reserve the right to edit or delete any post. Users not complying with these rules can be banned temporarily or permanently.</p>'
-hosting:
-    title: 'Hosting'
-    text: 'Captain Coaster is hosted by Amazon Web Services, whose headquarters are in Seattle, Washington, United States. Our servers are located in Paris, France.'
-copyright:
-    title: 'Copyright'
-    text:
-        '<p>The "Captain Coaster" logo belongs to Benjamin R., Captain Coaster has the exclusive rights to use and modify it. Any reproduction without authorization is forbidden.</p>
-        <p>Every user can upload pictures on Captain Coaster with its credit. If you are the owner of a photo you don’t want to share on Captain Coaster, please <a href="{link_href}">contact us</a> and the picture will be removed as soon as possible.</p>'
-contact:
-    title: 'Contact us'
-    text: '<b>Any questions or remarks ? <a href="{link_href}">Contact us</a>, we don''t bite.</b>'
+
+        <h2>Intellectual Property</h2>
+        <p><strong>The site:</strong> Content protected by copyright. Personal use authorized, commercial use prohibited.</p>
+
+        <p><strong>Your content:</strong> You remain owner of your photos and reviews. By publishing them, you authorize us to use them within the service.</p>
+
+        <p><strong>Photo upload:</strong> By uploading a photo, you guarantee that you own the copyright or have obtained written authorization from the rights holder.</p>
+
+        <p><strong>Issue:</strong> Content published without authorization? <a href="{contact_link}">Contact us</a> for removal.</p>
+
+        <h2>Liability</h2>
+        <p>Captain Coaster does not guarantee the accuracy of information shared by the community. We moderate but cannot verify everything.</p>
+
+        <h2>Applicable Law</h2>
+        <p>These terms are governed by French law. In case of discrepancy between language versions, the French version prevails.</p>
+
+        <h2>Contact</h2>
+        <p><a href="{contact_link}">Contact us</a> for any questions about these terms.</p>
