[#195] - Link Model to Manufacturer

--- a/translations/validators+intl-icu.en.yml
+++ b/translations/validators+intl-icu.en.yml
@@ -3,6 +3,9 @@ top_coaster.duplicate: '{coaster} appears several times. Please remove duplicate
 # Admin validators
 date_minimum:
     error: Year must be at least 1800.
+model_manufacturer:
+    wrong: '{model} is not linked to {manufacturer}. Please select another model or manufacturer.'
+
 # Ride date validation
 ride_date:
     before_opening: The ride date cannot be before the coaster opened.
