--- a/translations/security+intl-icu.de.yml
+++ b/translations/security+intl-icu.de.yml
@@ -1,3 +1,3 @@
 login:
     authentication_failed: 'Authentifizierung fehlgeschlagen. Bitte versuchen Sie es erneut.'
-    account_disabled: 'Ihr Konto wurde nicht aktiviert. Bitte überprüfen Sie Ihre E-Mail und klicken Sie auf den Aktivierungslink.'
+    account_banned: 'Ihr Konto wurde gesperrt. Bitte kontaktieren Sie den Support, wenn Sie glauben, dass dies ein Fehler ist.'
