--- a/translations/security+intl-icu.en.yml
+++ b/translations/security+intl-icu.en.yml
@@ -1,3 +1,3 @@
 login:
     authentication_failed: 'Authentication failed. Please try again.'
-    account_disabled: 'Your account has not been activated. Please check your email and click on the activation link.'
+    account_banned: 'Your account has been banned. Please contact support if you believe this is an error.'
