--- a/translations/security+intl-icu.es.yml
+++ b/translations/security+intl-icu.es.yml
@@ -1,3 +1,3 @@
 login:
     authentication_failed: 'Error de autenticación. Por favor, inténtalo de nuevo.'
-    account_disabled: 'Tu cuenta no ha sido activada. Por favor, verifica tu correo electrónico y haz clic en el enlace de activación.'
+    account_banned: 'Tu cuenta ha sido baneada. Por favor, contacta con soporte si crees que esto es un error.'
