User lifecycle & account deletion (#295)
* simplify user registration

* allow users to delete their account

* fixes

* update dependencies

* fixes cascade to handle image deletion

* fix tests

--- a/translations/security+intl-icu.en.yml
+++ b/translations/security+intl-icu.en.yml
@@ -1,3 +1,4 @@
 login:
     authentication_failed: 'Authentication failed. Please try again.'
-    account_disabled: 'Your account has not been activated. Please check your email and click on the activation link.'
+    account_banned: 'Your account has been deactivated. Please contact us if you believe this is an error.'
+    account_deleted: 'Your account has been deleted and is no longer accessible.'
