revert the distance sort in search

--- a/translations/messages+intl-icu.de.yml
+++ b/translations/messages+intl-icu.de.yml
@@ -161,6 +161,7 @@ filters:
     openingDate: Eröffnungsdatum
     name: Name
     clear: Filter löschen
+    sortByDistance: Nach Entfernung sortieren
 
     sorts:
         default: Standardmäßige Sortierung
