--- a/translations/messages+intl-icu.es.yml
+++ b/translations/messages+intl-icu.es.yml
@@ -161,6 +161,7 @@ filters:
     openingDate: Fecha de apertura
     name: Nombre
     clear: Borrar filtros
+    sortByDistance: Ordenar por distancia
 
     sorts:
         default: Ordenar por defecto
