--- a/translations/messages+intl-icu.fr.yml
+++ b/translations/messages+intl-icu.fr.yml
@@ -161,6 +161,7 @@ filters:
     openingDate: "Date d'ouverture"
     name: Nom
     clear: Effacer les filtres
+    sortByDistance: Trier par distance
 
     sorts:
         default: Tri par défaut
